# sheepai25

./: .gitignore
backend/: .env.example  README.md  analyze.py  api.py  constants.py  digest.py  ingest.py  justfile  mail.py  matcher.py  pyproject.toml  schema.sql  score.py  scrape.py
data/: db.sqlite
ui/: .env.example  README.md  index.html  tailwind.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: CategorySelector.tsx
ui/src/components/dashboard/: ArticleDetail.tsx  ArticleList.tsx  ChatPanel.tsx  Header.tsx
ui/src/components/ui/: empty-state.tsx  error-state.tsx
ui/src/data/: mockArticles.ts  mockCategories.ts
ui/src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx  Onboarding.tsx  Profile.tsx
ui/src/types/: article.ts
