[project]
name = "ftl2"
version = "0.0.1"
description = "FTL2 news engine backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "apify-client>=2.3.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "think-llm",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.7",
]
